--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -15,13 +15,25 @@
             android:textSize="24sp"
             android:text="3 x 3" />
 
-    <TextView
-            android:id="@+id/tv_lives"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textSize="18sp"
-            android:text="Vies: 3" />
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="111dp">
+
+        <TextView
+                android:text="@string/lives"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_lives_const" />
+
+        <TextView
+                android:id="@+id/tv_lives"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="18sp"
+                android:text="etsteurys" />
+    </LinearLayout>
 
     <EditText
             android:id="@+id/et_answer"
