--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,6 +23,15 @@
             android:name="com.example.calculmentalapp.GameFragment"
             android:label="@string/game_fragment_label"
             tools:layout="@layout/fragment_game">
+        <action
+                android:id="@+id/action_GameFragment_to_SaveScoreFragment"
+                app:destination="@id/SaveScoreFragment" />
+    </fragment>
+    <fragment
+            android:id="@+id/SaveScoreFragment"
+            android:name="com.example.calculmentalapp.SaveScoreFragment"
+            android:label="@string/save_score_fragment_label"
+            tools:layout="@layout/fragment_save_score">
     </fragment>
     <fragment
             android:id="@+id/SecondFragment"
