--- a/app/src/main/res/values-fr/strings_fr.xml
+++ b/app/src/main/res/values-fr/strings_fr.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Calcul Mentalo !</string>
     <string name="action_settings">Paramètres</string>
+    <string name="action_about">À propos</string>
     <!-- Strings used for fragments for navigation -->
     <string name="home_fragment_label">Home Fragment</string>
     <string name="game_fragment_label">Game Fragment</string>
@@ -21,4 +22,8 @@
     <string name="retry">Rejouer</string>
 
     <string name="lives">Vies : </string>
+
+    <string name="credits">Application réalisée par Florian Escande</string>
+    <string name="features_title">Fonctionnalités :</string>
+    <string name="features">Lorem Ipsum sheeesh</string>
 </resources>
