--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,19 +8,19 @@
 
     <Button
             android:id="@+id/button_play"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Play"
+            android:text="@string/play_button"
             app:layout_constraintBottom_toTopOf="@+id/button_highscore"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/button_highscore"
+            app:layout_constraintStart_toStartOf="@+id/button_highscore"
             app:layout_constraintTop_toTopOf="parent" />
 
     <Button
             android:id="@+id/button_highscore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Highscore"
+            android:text="@string/highscore_button"
             app:layout_constraintBottom_toTopOf="@+id/button_exit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,20 +28,21 @@
 
     <Button
             android:id="@+id/button_exit"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Exit"
+            android:text="@string/exit_button"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/button_highscore"
+            app:layout_constraintStart_toStartOf="@+id/button_highscore"
             app:layout_constraintTop_toBottomOf="@+id/button_highscore" />
 
     <Button
             android:id="@+id/button_first"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/next"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/button_highscore"
+            app:layout_constraintEnd_toEndOf="@+id/button_highscore"
             app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
