--- a/app/src/main/res/layout/fragment_save_score.xml
+++ b/app/src/main/res/layout/fragment_save_score.xml
@@ -11,7 +11,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:text="Score: "
+            android:text="@string/save_score_score"
             android:textSize="20sp" />
 
     <EditText
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/text_score"
             android:layout_marginTop="20dp"
-            android:hint="Entrez votre nom"
+            android:hint="@string/username_input"
             android:inputType="text" />
 
     <Button
@@ -30,5 +30,5 @@
             android:layout_below="@id/edit_name"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:text="Enregistrer score" />
+            android:text="@string/button_save_score" />
 </RelativeLayout>
