--- a/app/src/main/res/values-fr/strings_fr.xml
+++ b/app/src/main/res/values-fr/strings_fr.xml
@@ -31,4 +31,8 @@
     <string name="credits">Application réalisée par Florian Escande</string>
     <string name="features_title">Fonctionnalités :</string>
     <string name="features">Lorem Ipsum sheeesh</string>
+
+    <string name="save_score_score">Score : </string>
+    <string name="username_input">Entrez votre pseudo</string>
+    <string name="button_save_score">Enregistrer le score</string>
 </resources>
