--- a/app/src/main/res/layout/popup_settings.xml
+++ b/app/src/main/res/layout/popup_settings.xml
@@ -4,7 +4,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@android:color/white"
+        android:background="?attr/bg_color"
         android:padding="0dp"
         >
 
