remove useless fragment

--- a/app/src/main/res/values-fr/strings_fr.xml
+++ b/app/src/main/res/values-fr/strings_fr.xml
@@ -30,7 +30,7 @@
 
     <string name="credits">Application réalisée par Florian Escande</string>
     <string name="features_title">Fonctionnalités :</string>
-    <string name="features">Lorem Ipsum sheeesh</string>
+    <string name="features">Musique de fond, thème sombre, options de langue</string>
 
     <string name="save_score_score">Score : </string>
     <string name="username_input">Entrez votre pseudo</string>
