--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,10 +6,12 @@
             android:id="@+id/action_settings"
             android:title="@string/action_settings"
             android:orderInCategory="100"
-            app:showAsAction="never" />
+            app:showAsAction="never"
+            android:titleTextColor="?attr/colorOnSecondary" />
     <item
             android:id="@+id/action_about"
             android:title="@string/action_about"
             android:orderInCategory="100"
-            app:showAsAction="never" />
+            app:showAsAction="never"
+            android:titleTextColor="?attr/colorOnSecondary" />
 </menu>
