--- a/app/src/main/res/values-fr/strings_fr.xml
+++ b/app/src/main/res/values-fr/strings_fr.xml
@@ -15,6 +15,9 @@
     <string name="highscore_button">Meilleurs scores</string>
     <string name="exit_button">Quitter</string>
 
+    <string name="confirm">Confirmer</string>
+    <string name="answer">Réponse</string>
+
     <string name="enable_music">Activer la musique</string>
     <string name="enable_night_mode">Activer le mode nuit</string>
     <string name="select_language">Sélectionner une langue</string>
@@ -27,6 +30,9 @@
     <string name="retry">Rejouer</string>
     <string name="score_display">Score : </string>
     <string name="lives">Vies : </string>
+
+    <string name="game_over">Game Over</string>
+    <string name="final_score">Votre score final : </string>
 
     <string name="credits">Application réalisée par Florian Escande</string>
     <string name="features_title">Fonctionnalités :</string>
