--- a/app/src/main/res/layout/popup_settings.xml
+++ b/app/src/main/res/layout/popup_settings.xml
@@ -50,6 +50,7 @@
     </LinearLayout>
 
     <LinearLayout
+            android:id="@+id/layout_select_language"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
